<resources>
    <string name="app_name">Jedźmy razem</string>

    <string name="register_hint_username">Nazwa użytkownika</string>
    <string name="register_hint_phone">Numer telefonu</string>
    <string name="register_hint_confirmpassword">Potwierdź hasło</string>
    <string name="register_btn_register">Utwórz konto</string>
    <string name="register_registeredOk">Zarejestrowano pomyślnie.</string>
    <string name="register_registeredNotOk">Błąd podczas rejestracji. Spróbuj ponownie lub zarejestruj się na www.jedzmyrazem.pl</string>

    // Register activity - validation errors
    <string name="registrationValidation_loginEmpty">Login jest wymagany!</string>
    <string name="registrationValidation_emailEmpty">Email jest wymagany!</string>
    <string name="registrationValidation_passwordEmpty">Hasło jest wymagane!</string>
    <string name="registrationValidation_passwordConfirmationEmpty">Potwierdzenie hasła jest wymagane!</string>
    <string name="registrationValidation_passwordsNotTheSame">Hasła różnią się.</string>
    <string name="registrationValidation_emailFormatIncorrect">Email został podany w niepoprawnym formacie. Powinien być: name@example.com</string>
    <string name="registrationValidation_passwordAtLeastEightCharacters">Hasło musi skadać się z co najmniej 8 znaków.</string>

    <string name="phoneValidation">Numer telefonu musi składać się z 9 cyfr.</string>

    //Map activity
    <string name="my_localization">Moja lokalizacja</string>
    <string name="journey_destination">Cel podróży</string>
    <string name="search">Szukaj</string>
    <string name="powerdby_image_description">Google logo</string>

    //parent view
    <string name="from">Z:</string>
    <string name="to">Do:</string>
    <string name="startPlaceHolder">start</string>
    <string name="finishPlaceHolder">finish</string>
    <string name="timePlaceHolder">time</string>
    <string name="zero">0</string>
    <string name="passes">Przesiadki</string>

    //child view
    <string name="driver">Kierowca:</string>
    <string name="driverPlaceHolder">Jan Kowalski</string>
    <string name="phone">tel.</string>
    <string name="phonePlaceholder">111222333</string>
    <string name="spaces">Miejsca:</string>

</resources>
