<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/scrollView"
    android:layout_alignRight="@+id/autoCompleteTextViewDst"
    android:layout_alignEnd="@+id/autoCompleteTextViewDst"
    android:visibility="visible"
    android:foregroundGravity="left"
    android:gravity="start"
    android:background="#d268737e">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/startPlaceHolder"
        android:id="@+id/textViewStartPlace"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textViewFinishPlace"
        android:layout_alignStart="@+id/textViewFinishPlace"
        android:textSize="24sp"
        android:singleLine="false"
        android:layout_toStartOf="@+id/textViewStartTime"
        android:layout_marginRight="3sp"
        android:maxWidth="200sp"
        android:gravity="left"
        android:layout_alignParentStart="false"
        android:layout_toRightOf="@+id/textViewStartTime"
        android:ellipsize="middle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timePlaceHolder"
        android:id="@+id/textViewStartTime"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/textViewStartPlace"
        android:layout_alignBottom="@+id/textViewStartPlace"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/textViewTo"
        android:textSize="24sp"
        android:layout_below="@+id/textViewStartPlace"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/finishPlaceHolder"
        android:id="@+id/textViewFinishPlace"
        android:layout_below="@+id/textViewStartPlace"
        android:layout_toRightOf="@+id/textViewTo"
        android:layout_toEndOf="@+id/textViewTo"
        android:layout_marginEnd="5sp"
        android:layout_marginRight="3sp"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timePlaceHolder"
        android:id="@+id/textViewFinishTime"
        android:focusableInTouchMode="false"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/textViewFinishPlace"
        android:layout_alignBottom="@+id/textViewFinishPlace"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/textViewPassesCount"
        android:layout_below="@+id/textViewFinishTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16sp"
        android:layout_marginEnd="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/passes"
        android:id="@+id/textViewPasses"
        android:layout_marginRight="12sp"
        android:layout_marginEnd="12sp"
        android:layout_below="@+id/textViewFinishTime"
        android:layout_toLeftOf="@+id/textViewPassesCount"
        android:layout_toStartOf="@+id/textViewPassesCount" />
</RelativeLayout>